Use flex-basis for fixed widths that shrink on small windows

--- a/css/main.css
+++ b/css/main.css
@@ -27,24 +27,21 @@ body {
 
 .about-cols {
   display: flex;
-  flex-wrap: wrap;
   width: 100%;
 }
 
 .about-img {
-/*  padding: 0px 50px 15px 25px;*/
   padding-top: 20px;
-  width: 38%;
-  float: left;
-  min-width: 200px;
+  flex: 0 1 250px;
+  min-width: 150px;
   text-align: center;
 }
 
 .about-desc {
-  width: 100%;
+  flex: 0 1 650px;
+  min-width: 0;
   padding-right: 20px;
   padding-left: 50px;
-  float: right;
 }
 .social-icons {
   margin-top: 20px;
